--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
     <title>{{title}}</title>
 </head>
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
 <body>
     {{{body}}}
