3ra pre-entrega

--- a/src/views/error.handlebars
+++ b/src/views/error.handlebars
@@ -1,4 +1,7 @@
 <div class="container p-5 text-center">
     <h1>{{httpStatus}}</h1>
     <h2>{{message}}</h2>
+    <a href="/profile">
+        <button class="btn btn-danger">Return to main menu</button>
+    </a>
 </div>
